# TabularData

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: TabularDataConfig.cmake.in
examples/: main.cpp
include/: TabularData.h
include/TabularData/: TabularData.hpp
src/: TabularData.cpp  create_offsets_file.cpp
tests/: CMakeLists.txt  test_headers_gtest.cpp  unit_test.cpp
tests/sample_csv/: homes.csv  simple.csv
